update phone media

--- a/index.html
+++ b/index.html
@@ -51,9 +51,6 @@
       <img src="img/Day.png"   class="title-img title-day"   alt="Day" />
     </div>
 
-    <!-- name -->
-    <img src="img/Anosa.png" class="name-img" alt="ANOSA" />
-
     <!-- cake block (your component) -->
     <section class="cake-block">
       <!-- cake -->
@@ -68,7 +65,7 @@
     
         <!-- ⭐ Put YOUR text here -->
         <div id="congrats-message" style="display:none;">
-          <h3 class="gc-title">💜Happy Birthday Anosty💜</h3>
+          <h3 class="gc-title">Happy Birthday Anosty</h3>
           <p class="gc-text">
             I pray this tiring year passes quickly and you barely feel it,
             <br><br>
